--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.2",
+    "bootstrap": "^5.2.2",
     "next": "^12.2.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
+    "react-burger-menu": "^3.0.8",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-photo-collage": "^1.0.9",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "sidebar": "^1.0.2",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
